[IMP] account, mrp*: hide unnecessary decimals for quantity in reports
*: purchase, repair, sale

Currently, PDF reports display quantities with unnecessary decimals
(e.g., '2.00' instead of '2'). Now we have updated the formatting to show whole
numbers when decimals are .00, ensuring a cleaner and more readable design.

task - [4547923](https://www.odoo.com/odoo/my-tasks/4547923)

--- a/addons/l10n_hu_edi/views/report_invoice.xml
+++ b/addons/l10n_hu_edi/views/report_invoice.xml
@@ -70,7 +70,7 @@
                 <div t-field="o.l10n_hu_payment_mode"/>
             </div>
         </xpath>
-        <xpath expr="//table[@name='invoice_line_table']//span[@t-field='line.quantity']" position="attributes">
+        <xpath expr="//table[@name='invoice_line_table']//span[@t-out='format_number(line.quantity)']" position="attributes">
             <attribute name="t-field"/>
             <attribute name="t-out">line.quantity * sign if line.quantity != 0 else line.quantity</attribute>
         </xpath>
