--- a/addons/purchase/report/purchase_order_templates.xml
+++ b/addons/purchase/report/purchase_order_templates.xml
@@ -51,6 +51,7 @@
                 </div>
             </div>
 
+            <t t-set="format_number" t-value="lambda x: int(x) if x.is_integer() else x"/>
             <table class="o_has_total_table table o_main_table table-borderless">
                 <thead>
                     <tr>
@@ -75,7 +76,7 @@
                                     <span t-field="line.name"/>
                                 </td>
                                 <td class="text-end">
-                                    <span t-field="line.product_qty"/>
+                                    <span t-out="format_number(line.product_qty)"/>
                                     <span t-field="line.product_uom_id.name" groups="uom.group_uom"/>
                                     <span t-if="line.product_uom_id != line.product_id.uom_id" class="text-muted small">
                                         <br/>
