--- a/addons/sale/report/ir_actions_report_templates.xml
+++ b/addons/sale/report/ir_actions_report_templates.xml
@@ -72,6 +72,7 @@
             <t t-set="display_discount" t-value="any(l.discount for l in lines_to_report)"/>
 
             <div class="oe_structure"></div>
+            <t t-set="format_number" t-value="lambda x: int(x) if x.is_integer() else x"/>
             <table class="o_has_total_table table o_main_table table-borderless">
                 <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                 <thead style="display: table-row-group">
@@ -107,7 +108,7 @@
                             <t t-if="not line.display_type and line.product_type != 'combo'">
                                 <td name="td_name"><span t-field="line.name">Bacon Burger</span></td>
                                 <td name="td_quantity" class="text-end text-nowrap">
-                                    <span t-field="line.product_uom_qty">3</span>
+                                    <span t-out="format_number(line.product_uom_qty)">3</span>
                                     <span t-field="line.product_uom_id">units</span>
                                     <span t-if="line.product_uom_id != line.product_id.uom_id" class="text-muted small">
                                         <t t-set="quantity_in_product_uom" t-value="line.product_uom_id._compute_quantity(line.product_uom_qty, line.product_id.uom_id)"/>
