[FIX] website_sale: prevent an error when process a payment
An error occurs when a user attempts to make a payment without specifying a
'state' in the address.

Step to produce:

- Install the 'website_sale' module.
- Enable the Demo payment method.
- Navigate to /shop, add a product, and open the cart.
- Click on the Checkout button and enter an address without a 'state'.
- Click Pay With Demo to pay.

KeyError: 'state'

This issue occurs because the system attempts to retrieve the 'state' from the
address at [1], but it is missing in it.

Link [1]: https://github.com/odoo/odoo/blob/169bbab49bb345c1243b02da0a1510e45faba64e/addons/website_sale/controllers/main.py#L1666

To resolve this issue, add a `state` in the payment express checkout form,
To ensure that the address always contains a 'state', And  provides a
default 'state' if it not available in address.

Sentry-6295883035

--- a/addons/payment_demo/views/payment_demo_templates.xml
+++ b/addons/payment_demo/views/payment_demo_templates.xml
@@ -166,6 +166,19 @@
                         />
                     </div>
                     <div class="col mb-0">
+                        <label for="o_payment_demo_shipping_state" class="mt-1">
+                            <small><b>State</b></small>
+                        </label>
+                        <select id="o_payment_demo_shipping_state"
+                                class="form-select"
+                                disabled="true"
+                        >
+                            <option t-att-value="customer.state_id.code or 'BE-WBR'"
+                                    t-out="customer.state_id.name or 'Walloon Brabant'"
+                            />
+                        </select>
+                    </div>
+                    <div class="col mb-0">
                         <label for="o_payment_demo_shipping_country" class="mt-1">
                             <small><b>Country</b></small>
                         </label>
