--- a/addons/l10n_latam_invoice_document/views/report_templates.xml
+++ b/addons/l10n_latam_invoice_document/views/report_templates.xml
@@ -3,24 +3,22 @@
 
     <template id="external_layout_standard" inherit_id="web.external_layout_standard" >
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="header o_company_#{company.id}_layout" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-attf-class="header o_company_#{company.id}_layout"
-                 t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="header o_company_#{company.id}_layout" position="after">
+            <div t-attf-class="header o_company_#{company.id}_layout" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div class="o_footer_content d-flex border-top pt-2" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
 
-        <div class="o_footer_content d-flex border-top pt-2" position="after">
-            <div class="o_footer_content border-top pt-2"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
@@ -28,22 +26,21 @@
 
     <template id="external_layout_bold" inherit_id="web.external_layout_bold" >
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="header o_company_#{company.id}_layout" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="header o_company_#{company.id}_layout" position="after">
+            <div t-attf-class="header o_company_#{company.id}_layout" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div class="o_footer_content row border-top pt-2" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
-        <div class="o_footer_content row border-top pt-2" position="after">
-            <div class="o_footer_content row border-top pt-2"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
@@ -51,22 +48,21 @@
 
     <template id="external_layout_boxed" inherit_id="web.external_layout_boxed" >
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="header o_company_#{company.id}_layout" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="header o_company_#{company.id}_layout" position="after">
+            <div t-attf-class="header o_company_#{company.id}_layout" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div class="o_footer_content row border-top pt-2" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
-        <div class="o_footer_content row border-top pt-2" position="after">
-            <div class="o_footer_content row border-top pt-2"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
@@ -74,23 +70,21 @@
 
     <template id="external_layout_striped" inherit_id="web.external_layout_striped" >
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="o_company_#{company.id}_layout header" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-attf-class="o_company_#{company.id}_layout header"
-                 t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="o_company_#{company.id}_layout header" position="after">
+            <div t-attf-class="o_company_#{company.id}_layout header" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div class="o_footer_content border-top pt-2 text-center" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
-        <div class="o_footer_content border-top pt-2 text-center" position="after">
-            <div class="o_footer_content border-top pt-2 text-center"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
@@ -98,22 +92,21 @@
 
     <template id="external_layout_bubble" inherit_id="web.external_layout_bubble">
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="header o_company_#{company.id}_layout {{report_type == 'pdf' and 'pt-5'}}" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="header o_company_#{company.id}_layout {{report_type == 'pdf' and 'pt-5'}}" position="after">
+            <div t-attf-class="header o_company_#{company.id}_layout {{report_type == 'pdf' and 'pt-5'}}" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div t-attf-class="o_footer_content {{report_type != 'pdf' and 'position-absolute end-0 start-0 bottom-0 mx-5'}} pt-4 text-center" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'position-relative mt-auto mx-n5'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
-        <div t-attf-class="o_footer_content {{report_type != 'pdf' and 'position-absolute end-0 start-0 bottom-0 mx-5'}} pt-4 text-center" position="after">
-            <div t-attf-class="o_footer_content {{report_type != 'pdf' and 'position-absolute end-0 start-0 bottom-0 mx-5'}} pt-4 text-center"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'position-relative mt-auto mx-n5'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'position-relative mt-auto mx-n5'}}" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
@@ -121,22 +114,21 @@
 
     <template id="external_layout_wave" inherit_id="web.external_layout_wave">
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="header o_company_#{company.id}_layout {{report_type != 'pdf' and 'h-0'}}" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="header o_company_#{company.id}_layout {{report_type != 'pdf' and 'h-0'}}" position="after">
+            <div t-attf-class="header o_company_#{company.id}_layout {{report_type != 'pdf' and 'h-0'}}" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div t-attf-class="o_footer_content {{report_type != 'pdf' and 'position-absolute end-0 start-0 bottom-0 mx-5'}} pt-5 text-center" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'position-relative mt-auto mx-n5'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
-        <div t-attf-class="o_footer_content {{report_type != 'pdf' and 'position-absolute end-0 start-0 bottom-0 mx-5'}} pt-5 text-center" position="after">
-            <div t-attf-class="o_footer_content {{report_type != 'pdf' and 'position-absolute end-0 start-0 bottom-0 mx-5'}} pt-5 text-center"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'position-relative mt-auto mx-n5'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'position-relative mt-auto mx-n5'}}" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
@@ -144,22 +136,21 @@
 
     <template id="external_layout_folder" inherit_id="web.external_layout_folder">
         <!-- support for custom header -->
-        <xpath expr="//img/../.." position="attributes">
+        <div t-attf-class="header o_company_#{company.id}_layout {{report_type != 'pdf' and 'h-0'}}" position="attributes">
             <attribute name="t-if">not custom_header</attribute>
-        </xpath>
-        <xpath expr="//img/../.." position="after">
-            <div t-if="custom_header and company._localization_use_documents()">
+        </div>
+        <div t-attf-class="header o_company_#{company.id}_layout {{report_type != 'pdf' and 'h-0'}}" position="after">
+            <div t-attf-class="header o_company_#{company.id}_layout {{report_type != 'pdf' and 'h-0'}}" t-if="custom_header">
                 <t t-call="#{custom_header}"/>
             </div>
-        </xpath>
+        </div>
 
         <!-- support for custom footer -->
-        <div class="o_footer_content d-flex border-top pt-2" position="attributes">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="attributes">
             <attribute name="t-if">not custom_footer</attribute>
         </div>
-        <div class="o_footer_content d-flex border-top pt-2" position="after">
-            <div class="o_footer_content border-top pt-2"
-                 t-if="custom_footer and company._localization_use_documents()">
+        <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" position="after">
+            <div t-attf-class="footer o_company_#{company.id}_layout {{report_type != 'pdf' and 'mt-auto'}}" t-if="custom_footer">
                 <t t-out="custom_footer"/>
             </div>
         </div>
