--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2282,20 +2282,26 @@
                 <t t-else="">
                     <!-- No need to set href for address template as save address result will redirect
                     to proper place if all values are properly filled -->
-                    <t
-                        t-if="xmlid == 'website_sale.address'"
-                        t-set="main_button_href"
-                        t-value="False"
-                    />
-                    <t
-                        t-else=""
-                        t-set="main_button_href"
-                        t-value="step_specific_values['main_button_href']"
-                    />
+                    <t t-if="xmlid == 'website_sale.address'">
+                        <t t-set="main_button_href" t-value="False"/>
+                        <t t-if="is_anonymous_cart" t-set="main_button_label">
+                             Continue checkout
+                        </t>
+                        <t t-else="" t-set="main_button_label">
+                            Save address
+                        </t>
+                    </t>
+                    <t t-else="">
+                        <t t-set="main_button_href" t-value="step_specific_values['main_button_href']"/>
+                        <t
+                            t-set="main_button_label"
+                            t-value="step_specific_values['main_button']"
+                        />
+                    </t>
                     <a role="button" name="website_sale_main_button"
                         t-attf-class="#{_cta_classes} btn btn-primary #{not website_sale_order._is_cart_ready() and 'disabled'} #{_form_send_navigation and 'order-lg-3 w-100 w-lg-auto ms-lg-auto' or 'w-100'}"
                         t-att-href="main_button_href">
-                        <t t-out="step_specific_values['main_button']"/>
+                        <t t-out="main_button_label"/>
                         <i class="fa fa-angle-right ms-2 fw-light"/>
                     </a>
                 </t>
