[IMP] mail: discuss style improvements
This PR makes a few improvements to message list spacing,
avatar sizes, dark theme border opacity

1. more spacing between avatar and message horizontally in non-chat windows

Reasons:
- spacing with discuss sidebar was too narrow,
- spacing between avatar and message bubble was too small
- increased sidebar width gives more room for AM/PM timestamp

2. bigger avatars in discuss sidebar, message and composer

Reason:
- avatar in sidebar were too small so barely visible,
- avatar size of message author and discuss header are consistent
- composer avatar looks more centered with input

3. message "..." expand action in mobile is less visible

Reason: was too distracting in message list of mobile.

4. message bubble border is softer in dark theme

Reason: white theme needs clear border to pops items without heavy
coloring, when items are dark the bg color does already most of the
job, so very slight border is enough.

5. no border in discuss sidebar / header / panel in dark theme

Reason: same idea as with message bubble but the UI elements are big
and static enough to not need border.

6. reduced border in dark theme for composer input and chat window

Reason: same idea, including reduced effect when input has focus, as
the dark theme doesn't need much color or opacity difference to be
clearly visible compared to white theme. Chat window reduced border
is to make chat window feel less "in-a-box" but still present to not
fuse with content under the chat window.

--- a/addons/mail/static/src/core/common/composer.dark.scss
+++ b/addons/mail/static/src/core/common/composer.dark.scss
@@ -1,5 +1,10 @@
 .o-mail-Composer {
     --mail-Composer-bg: #{mix($gray-100, $o-view-background-color)};
+    --mail-Composer-inputContainerFocusedOpacity: .25
+}
+
+.o-mail-Composer-bg {
+    --border-opacity: 0;
 }
 
 .o-mail-Composer-actions {
