--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -11,8 +11,7 @@
     }
 
     .o-mail-Composer-sidebarMain {
-        padding-top: 0.1875rem; // avatar centered with composer text input: 36px (avatar) + 2*3px (this value) = 20px + 2 * { 10px (padding) + 1px (border) }
-        width: 48px;
+        width: $o-mail-Message-sidebarWidth;
     }
 
     .o-mail-Composer-coreHeader {
@@ -206,7 +205,7 @@
     }
 
     &:has(textarea:focus) {
-        --border-opacity: 0.35;
+        --border-opacity: var(--mail-Composer-inputContainerFocusedOpacity, 0.35);
         border-color: rgba($o-action, var(--border-opacity)) !important;
     }
 }
