--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -149,9 +149,13 @@
     z-index: $o-mail-NavigableList-zIndex;
 }
 
-.o-mail-Message-openActionMobile:active {
-    opacity: 75% !important;
-}
+.o-mail-Message-openActionMobile {
+    opacity: 15% !important;
+
+    &:active {
+        opacity: 75% !important;
+    }
+} 
 
 .o-mail-Message-pendingProgress {
     animation: o-mail-message-pendingProgress-animation 0s ease-in 0.5s forwards;
