[IMP] account, base, l10n_*: hide unnecessary elements
This commit enhances the user experience by conditionally hiding irrelevant
elements across various accounting and localization modules (`l10n_*`), based on
the user's country group or country code. This ensures a cleaner, more
region-specific interface.

Major Change:

Before this commit:
When the base LATAM module was installed, it introduced a new Identification
Type field in the view, which replaced the VAT (Tax ID) field. In a
multi-company setup, this caused issues for companies using other localizations,
as they were forced to see the Identification Type instead of the VAT field.

After this commit:
Visibility of the Identification Type is now conditional. It will only appear in
other localizations when the type is not `is_vat` and the allowed company is not
a LATAM company.

task-4613288

closes odoo/odoo#206454

Related: odoo/enterprise#83609
Related: odoo/upgrade#8191
Signed-off-by: Josse Colpaert (jco) <jco@odoo.com>

--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -129,7 +129,7 @@
                             </setting>
                             <setting id="intrastat_statistics" help="Collect information and produce statistics on the trade in goods in Europe with intrastat"
                                 documentation="/applications/finance/accounting/reporting/declarations/intrastat.html"
-                                invisible="'EU' not in company_country_group_codes">
+                                invisible="'INTRASTAT' not in company_country_group_codes">
                                 <field name="module_account_intrastat" widget="upgrade_boolean"/>
                             </setting>
                             <setting id="default_incoterm" string="Default Incoterm" help="Default Incoterm of your company">
