--- a/addons/project/views/project_task_views.xml
+++ b/addons/project/views/project_task_views.xml
@@ -764,7 +764,21 @@
                     <field name="stage_id_color" column_invisible="1"/>
                     <field name="is_rotting" column_invisible="True"/>
                     <field name="rotting_days" column_invisible="True"/>
-                    <field name="stage_id" column_invisible="context.get('set_visible', False)" optional="show" widget="badge_rotting" options="{'color_field': 'stage_id_color'}"/>
+                    <field name="stage_id"
+                        column_invisible="context.get('set_visible', False)"
+                        widget="badge_rotting"
+                        context="{'default_project_id': project_id}"
+                        options="{'color_field': 'stage_id_color'}"
+                        groups="project.group_project_manager"
+                        optional="show"
+                    />
+                    <field name="stage_id"
+                        column_invisible="context.get('set_visible', False)"
+                        widget="badge_rotting"
+                        options="{'no_create': True, 'color_field': 'stage_id_color'}"
+                        groups="!project.group_project_manager"
+                        optional="show"
+                    />
                 </list>
             </field>
         </record>
