[IMP] event: allow questions to be archived
This commit allows users to archived questions. The link between questions and
attendee answers can not be recovered if questions are deleted, so it is
still not possible to do it. But now, if users do not want to use some
questions anymore, they can archived them, then it is still possible to recover
them and their reporting.

Task-4247015

Part-of: odoo/odoo#195611
Related: odoo/upgrade#7153
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/event/views/event_question_views.xml
+++ b/addons/event/views/event_question_views.xml
@@ -26,6 +26,7 @@
                 <filter name="filter_is_not_reusable" string="Not Reusable" domain="[('is_reusable', '=', False)]"/>
                 <separator/>
                 <filter name="filter_is_default" string="Default Questions" domain="[('is_default', '=', True)]"/>
+                <filter name="filter_archive" string="Archived" domain="[('active', '=', False)]"/>
                 <group>
                     <filter string="Event" name="group_by_event" context="{'group_by': 'event_ids'}"/>
                 </group>
